@@ -5,6 +5,12 @@ Changelog
 1.6.1 (unreleased)
 ------------------
 
+- Package builder: update pkg_resources working set when loading package.
+  [jone]
+
+-
+  [jone]
+
 - Add creation date setter to builder.
   [mbaechtold]
 
